IVYPORTAL-9599 Various or urgent requests in IVYPORTAL S186  - IVYPORTAL-9488 [BUG][Minor] Alignment on upload in process Showcase application

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4108,6 +4108,10 @@ _:-ms-fullscreen, :root .content-link-history {
   padding-right: 20px;
 }
 
+.ui-fileupload.ui-widget .ui-fileupload-content .ui-fileupload-row>div {
+  vertical-align: middle;
+}
+
 /**************DATA TABLE START*******************/
 .column-header-top-alignment {
   vertical-align: baseline;
